src/controllers/trustpub/github_configs/list/snapshots/crates_io__controllers__trustpub__github_configs__list__tests__crate_with_no_configs-2.snap
---
source: src/controllers/trustpub/github_configs/list/tests.rs
expression: response.json()
---
{
  "github_configs": []
}
