src/controllers/trustpub/github_configs/list/snapshots/crates_io__controllers__trustpub__github_configs__list__tests__token_auth_with_wildcard_crate_scope-2.snap
---
source: src/controllers/trustpub/github_configs/list/tests.rs
expression: response.json()
---
{
  "github_configs": [
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 1,
      "repository_name": "foo-rs",
      "repository_owner": "rust-lang",
      "repository_owner_id": 42,
      "workflow_filename": "publish.yml"
    }
  ]
}
